--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ body {
     width: 100%;
     height: 100%;
     background-image: url("../image/background.jpg");
+    font-family: 'Source Han Sans SC', 'Noto Sans CJK SC', 'Microsoft Yahei', 'PingFang SC', 'Avenir', 'Segoe UI', 'Hiragino Sans GB', STHeiti, 'Microsoft Sans Serif', 'WenQuanYi Micro Hei', sans-serif;
 }
 
 p {
@@ -190,10 +191,10 @@ img {
     flex-flow: column nowrap;
     justify-content: space-between;
     align-items: center;
-    transition: background-color 0.3s;
-    -moz-transition: background-color 0.3s;
-    -webkit-transition: background-color 0.3s;
-    -o-transition: background-color 0.3s;
+    transition: color 0.3s, background-color 0.3s;
+    -moz-transition: color 0.3s, background-color 0.3s;
+    -webkit-transition: color 0.3s, background-color 0.3s;
+    -o-transition: color 0.3s, background-color 0.3s;
 }
 
 .item:hover {
@@ -389,4 +390,129 @@ img {
     flex-flow: row wrap;
     justify-content: center;
     align-items: flex-start;
+}
+
+@media screen and (min-width: 801px) {
+    .index_l {
+        z-index: 999;
+        width: 70%;
+        height: 100%;
+        backdrop-filter: blur(3px);
+        background-color: rgba(255,255,255,0.5);
+        box-shadow: 0px 2px 10px rgba(0,0,0,0.3);
+        background-image: url("../image/index.jpg");
+        background-position: bottom;
+        background-repeat: no-repeat;
+        background-size: cover;
+        transition: width 1s ease-in-out;
+    }
+    .index_r {
+        flex-grow: 1;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .index_l {
+        display: none;
+    }
+    .index_r {
+        width: 100%;
+    }
+}
+
+.index_r {
+    height: 100%;
+    display: flex;
+    display: -webkit-flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.index_avatar {
+    width: 200px;
+    height: 200px;
+    overflow: hidden;
+    border-radius: 50px;
+    box-shadow: 0px 2px 10px rgba(0,0,0,0.3);
+}
+
+.index_avatar img {
+    width: auto;
+    max-width: 100%;
+    height: auto;
+}
+
+.index_r h1 {
+    margin: 0 auto;
+    margin-top: 1em;
+    text-align: center;
+}
+
+.slogan {
+    font-weight: 300;
+    font-size: 0.8em;
+    color: #555555;
+}
+
+.navigation {
+    position: absolute;
+    width: 100%;
+    height: 50px;
+    top: 0;
+    backdrop-filter: blur(3px);
+    background-color: rgba(255,255,255,0.5);
+    box-shadow: 0px 2px 10px rgba(0,0,0,0.3);
+    display: flex;
+    display: -webkit-flex;
+    flex-flow: row nowrap;
+    align-items: center;
+}
+
+@media screen and (min-width: 801px) {
+    .navigation {
+        justify-content: flex-end;
+    }
+}
+@media screen and (max-width: 800px) {
+    .navigation {
+        justify-content: center;
+    }
+}
+
+.navigation div{
+    padding: 0 1em 0 1em;
+    cursor: pointer;
+    transition: color 0.25s;
+    -moz-transition: color 0.25s;
+    -webkit-transition: color 0.25s;
+    -o-transition: color 0.25s;
+}
+
+.navigation div:hover{
+    color: #198d44;
+}
+
+#info {
+    /* transform: scale(0.2); */
+    transition: transform 1s ease-in-out;
+}
+
+.copy {
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 1em;
+    display: flex;
+    display: -webkit-flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.copy img {
+    width: 24px;
+}
+.copy a {
+    margin-left: 0.5em;
 }
