--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
     background-color: #eeeeee;
     width: 100%;
     height: 100%;
-    background-image: url("../image/background.jpg");
+    background-image: url("../image/background.png");
     font-family: 'Source Han Sans SC', 'Noto Sans CJK SC', 'Microsoft Yahei', 'PingFang SC', 'Avenir', 'Segoe UI', 'Hiragino Sans GB', STHeiti, 'Microsoft Sans Serif', 'WenQuanYi Micro Hei', sans-serif;
 }
 
